Fix floating scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,9 @@ html,body {
   font-family: sans-serif;
 
   background-color: #61788C;
+}
 
+html {
   overflow-x: hidden;
   overflow-y: auto;
 }
